--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
 <section id="contacto">
   <h2>Contacto</h2>
   <p>¿Deseas colaborar o recibir consultoría? Escríbeme a:</p>
-  <p><a href="mailto:ricardo.villanueva@ejemplo.com">ricardo.villanueva@ejemplo.com</a></p>
+  <p><a href="mailto:jvillanuevatoledo@gmail.com">ricardo.villanueva@ejemplo.com</a></p>
 </section>
