--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <section id="hero">
   <h2>Jairo Villanueva</h2>
-  <p>Consultor en bioinformática, especialista en citometría de flujo y análisis de datos científicos.</p>
+  <p>Consultor especializado en citometría de flujo y análisis de datos científicos utilizando R y Python.</p>
 </section>
 
 <section id="sobre-mi">
