--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <section id="hero">
-  <h2>Jairo Villanueva</h2>
+  <h2>Jairo R. Villanueva-Toledo</h2>
   <p>Consultor especializado en citometría de flujo y análisis de datos científicos utilizando R y Python.</p>
 </section>
 
 <section id="sobre-mi">
   <h2>Sobre mí</h2>
   <p>
-    Soy consultor y profesional con experiencia en bioinformática, citometría de flujo, análisis de datos y desarrollo de soluciones científicas personalizadas. Este portafolio reúne parte de mi trayectoria, proyectos y servicios.
-  </p>
+    Soy consultor en Citometría de Flujo, análisis de datos y bioinformática </p>
 </section>
 
 <section id="proyectos">
