--- a/index.html
+++ b/index.html
@@ -1,25 +1,99 @@
-<section id="hero">
-  <h2>Jairo R. Villanueva-Toledo</h2>
-  <p>Consultor especializado en citometría de flujo y análisis de datos científicos utilizando R y Python.</p>
-</section>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jairo R. Villanueva-Toledo | Consultor en Citometría de Flujo y Análisis de Datos</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 2em;
+      background-color: #f5f6fa;
+      color: #222;
+    }
+    header {
+      background: #4F8EF7;
+      color: white;
+      padding: 1em;
+      border-radius: 8px;
+      margin-bottom: 2em;
+      text-align: center;
+    }
+    main {
+      background: white;
+      padding: 2em;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      max-width: 750px;
+      margin: 0 auto;
+    }
+    section {
+      margin-bottom: 2em;
+    }
+    #hero {
+      background: #eaf1fb;
+      padding: 1.5em;
+      border-radius: 8px;
+      text-align: center;
+    }
+    #hero h2 {
+      margin-top: 0;
+      font-size: 2em;
+      color: #3058a6;
+    }
+    #proyectos ul {
+      padding-left: 1.2em;
+    }
+    #contacto a {
+      color: #4F8EF7;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    #contacto a:hover {
+      text-decoration: underline;
+    }
+    footer {
+      margin-top: 2em;
+      text-align: center;
+      color: #aaa;
+      font-size: 0.95em;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Bienvenido a mi Proyecto Profesional</h1>
+  </header>
+  <main>
+    <section id="hero">
+      <h2>Jairo R. Villanueva-Toledo</h2>
+      <p>Consultor especializado en citometría de flujo y análisis de datos científicos utilizando R y Python.</p>
+    </section>
 
-<section id="sobre-mi">
-  <h2>Sobre mí</h2>
-  <p>
-    Soy consultor en Citometría de Flujo, análisis de datos y bioinformática </p>
-</section>
+    <section id="sobre-mi">
+      <h2>Sobre mí</h2>
+      <p>
+        Soy consultor en Citometría de Flujo, análisis de datos y bioinformática 
+      </p>
+    </section>
 
-<section id="proyectos">
-  <h2>Proyectos destacados</h2>
-  <ul>
-    <li><strong>Proyecto A:</strong> Análisis multivariado de datos de citometría.</li>
-    <li><strong>Proyecto B:</strong> Desarrollo de pipelines automatizados en R para análisis genómicos.</li>
-    <li><strong>Proyecto C:</strong> Asesoría técnica personalizada o a grupos de investigación biomédica.</li>
-  </ul>
-</section>
+    <section id="proyectos">
+      <h2>Proyectos destacados</h2>
+      <ul>
+        <li><strong>Proyecto A:</strong> Análisis multivariado de datos de citometría.</li>
+        <li><strong>Proyecto B:</strong> Desarrollo de pipelines automatizados en R para análisis genómicos.</li>
+        <li><strong>Proyecto C:</strong> Asesoría técnica personalizada o a grupos de investigación biomédica.</li>
+      </ul>
+    </section>
 
-<section id="contacto">
-  <h2>Contacto</h2>
-  <p>¿Deseas colaborar o recibir consultoría? Escríbeme a:</p>
-  <p><a href="mailto:jvillanuevatoledo@gmail.com">jvillanuevatoledo@gmail.com</a></p>
-</section>
+    <section id="contacto">
+      <h2>Contacto</h2>
+      <p>¿Deseas colaborar o recibir consultoría? Escríbeme a:</p>
+      <p><a href="mailto:jvillanuevatoledo@gmail.com">jvillanuevatoledo@gmail.com</a></p>
+    </section>
+  </main>
+  <footer>
+    &copy; 2025 - Jairo R. Villanueva-Toledo
+  </footer>
+</body>
+</html>
