--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   <main>
     <section id="hero">
       <h2>Jairo R. Villanueva-Toledo</h2>
+      <img src="G:/Mi unidad/LIBRO/CITOMETRIA-BIOINFORMATICA/images/Foto_de_perfil.jpg" alt="Texto alternativo" style="max-width:200px; border-radius:50%;">
       <p>Consultor especializado en citometría de flujo y análisis de datos científicos utilizando R y Python.</p>
     </section>
 
