--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
   <main>
     <section id="hero">
       <h2>Jairo R. Villanueva-Toledo</h2>
-      <p>MD, PhD</p>
-      <img src="G:\Mi unidad\LIBRO\CITOMETRIA-BIOINFORMATICA\images\Foto_de_perfil.jpg" alt="Texto alternativo" style="max-width:200px; border-radius:50%;">
+      <img src="G:/Mi unidad/LIBRO/CITOMETRIA-BIOINFORMATICA/images/Foto_de_perfil.jpg" alt="MD, PhD" style="max-width:200px; border-radius:50%;">
     </section>
 
     <section id="sobre-mi">
