--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
   <main>
     <section id="hero">
       <h2>Jairo R. Villanueva-Toledo</h2>
-      <img src="G:/Mi unidad/LIBRO/CITOMETRIA-BIOINFORMATICA/images/Foto_de_perfil.jpg" alt="MD, PhD">
+      <p>MD, PhD</p>
     </section>
 
     <section id="sobre-mi">
       <h2>Sobre mí</h2>
+      <img src="G:/Mi unidad/LIBRO/CITOMETRIA-BIOINFORMATICA/images/Foto_de_perfil.jpg">
       <p>
         Soy consultor en Citometría de Flujo, análisis de datos y bioinformática 
       </p>
